# BaCa2-broker

./: .env.template  .gitignore  README.md  config.py  local.env  pyproject.toml  run.py  scratch.py  settings.py  setup.py
.github/workflows/: test-http-server.yaml
api/: checker_parsers.py  database.sql  manager.py  message.py  server.py
app/: handlers.py  loger.py  logger.py  main.py
app/broker/: __init__.py  builder.py  datamaster.py  master.py  messenger.py  yaml_tags.py
broker/: __init__.py  __main__.py  builder.py  datamaster.py  master.py  message.py  messenger.py  server.py  submit.py  tests.py  timeout.py  yaml_tags.py
db/: connector.py  creator.sql
judges/: judge_main.py
tests/: test_broker_api.py  test_builder.py  test_datamaster.py  test_http_server.py  test_master.py  test_messenger.py  test_system.py
tests/resources/1/1/doc/: index.md
tests/resources/1/1/tests/set0/: config.yml
tests/resources/1/1/tests/set1/: config.yml
tests/resources/bid/1/: gen_out.sh
tests/resources/bid/1/prog/: bid.cpp
tests/resources/bid/1/tests/set0/: bid0a.in  bid0c.in  bid0e.in  bid0f.in  bid0g.in  bid0h.in  bid0j.in  bid0l.in  bid0m.in  bid0n.in  bid0o.in
tests/resources/bid/1/tests/set1_simple/: bid1a.in  bid1b.in  bid1c.in  bid1d.in  bid1e.in  bid1f.in
tests/resources/bid/1/tests/set2/: bid2a.in  bid2b.in  bid2c.in  bid2d.in  bid2e.in  bid2g.in  bid2h.in  config.yml
tests/resources/bid/1/tests/set3/: bid3b.in  bid3c.in  bid3d.in  bid3e.in  bid3f.in  config.yml
tests/resources/bid/1/tests/set4/: bid4b.in  bid4c.in  bid4d.in  bid4e.in  bid4g.in  config.yml
tests/test_integration/: test_messenger.py
tests/test_packages/1/1/: config.yml
tests/test_packages/1/1/prog/: solution.cpp
tests/test_packages/bid/1/: config.yaml
tests/test_packages/bid/1/prog/: bid.py
tests/test_units/: test_builder.py  test_datamaster.py  test_handlers.py  test_master.py  test_messenger.py
(+37 files in other folders)
