[tool.poetry]
name = "baca2-broker"
version = "0.1.0"
description = "Broker for BaCa2 project"
authors = [
    "Bartosz Deptuła <barti.deptula@gmail.com>",
    "Mateusz Kadula <mateusz.kadula@student.uj.edu.pl>"
]
readme = "README.md"
packages = [{include = "broker"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
baca2-package-manager = "^0.2.16"
requests = "^2.31.0"
fastapi = "^0.109.2"
python-dotenv = "^1.0.0"
coverage = "^7.3.2"
parameterized = "^0.9.0"
aiohttp = "^3.9.3"
aiologger = "^0.7.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
